[package]
name = "meowvorbis"
version = "0.1.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "0BSD"

[dependencies]
atomic-write-file = "0.2"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
indicatif = { version = "0.17", features = ["rayon"] }
optivorbis = "0.2"
rayon = "1"
walkdir = "2"

[profile.release]
lto = "thin"
